--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "simivar/Genius-PHP",
+  "name": "simivar/genius-php",
   "description": "Genius PHP is a open source library that allows you to access Genius API from your PHP application. Right now it supports only access_token connection (only get methods).",
   "keywords": ["genius", "rapgenius", "api", "psr-4"],
   "homepage": "http://github.com/Seldaek/monolog",
