Update README example

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "simivar/genius-php",
-  "description": "Genius PHP is a open source library that allows you to access Genius API from your PHP application. Right now it supports only access_token connection (only get methods).",
-  "keywords": ["genius", "rapgenius", "api", "psr-4"],
+  "description": "Genius PHP is a open source library that allows you to access Genius API from your PHP application. Supports every resource.",
+  "keywords": ["genius", "rapgenius", "api", "psr-4", "httplug"],
   "homepage": "https://github.com/simivar/Genius-PHP",
   "version": "1.0.0",
   "type": "library",
