--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.5",
         "symfony/http-client": "^5.2",
-        "nyholm/psr7": "^1.4"
+        "nyholm/psr7": "^1.4",
+        "friendsofphp/php-cs-fixer": "^3.0"
     },
     "autoload": {
         "psr-4": {
