--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "phpunit/phpunit": "^8.5",
         "symfony/http-client": "^5.2",
         "nyholm/psr7": "^1.4",
-        "friendsofphp/php-cs-fixer": "^3.0"
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpstan/phpstan": "^0.12.85",
+        "phpstan/phpstan-phpunit": "^0.12.18"
     },
     "autoload": {
         "psr-4": {
