--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "php-http/client-common": "^1.0 || ^2.0",
         "php-http/message-factory": "^1.0",
         "php-http/discovery": "^1.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "myclabs/php-enum": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
