--- a/composer.json
+++ b/composer.json
@@ -22,20 +22,22 @@
         "php": "^7.4 || ^8.0",
         "psr/http-message": "^1.0",
         "psr/http-client-implementation": "^1.0",
-        "php-http/httplug": "^1.0 || ^2.0",
-        "php-http/client-common": "^1.0 || ^2.0",
-        "php-http/message-factory": "^1.0",
-        "php-http/discovery": "^1.0",
+        "php-http/httplug": "^2.0",
+        "php-http/discovery": "^1.13",
         "ext-json": "*",
-        "myclabs/php-enum": "^1.8"
+        "myclabs/php-enum": "^1.8",
+        "php-http/message": "^1.0",
+        "php-http/client-common": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
-        "symfony/http-client": "^5.2",
-        "nyholm/psr7": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/phpstan": "^0.12.85",
-        "phpstan/phpstan-phpunit": "^0.12.18"
+        "phpstan/phpstan-phpunit": "^0.12.18",
+        "php-http/guzzle7-adapter": "^1.0",
+        "guzzlehttp/guzzle": "^7.3",
+        "guzzlehttp/psr7": "^1.8",
+        "http-interop/http-factory-guzzle": "^1.0"
     },
     "autoload": {
         "psr-4": {
